[package]
name = "core"
version = "0.1.0"
authors = ["constantin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
futures = "0.3.5"
bytes = "0.5.4"
mp4parse = "0.11.4"
